[tool.poetry]
name = "monarch_data"
version = "0.1.0"
description = "A LinkML project for basic metadata for ontologies and datasets."
authors = ["Monarch Data Schema <info@monarchinitiative.org>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/monarch_data/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
schema-automator = "^0.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
schema-automator = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]